Fixed minor layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ h1, h2, h3, h4, h5, h6, p, button, label, input, a, div {
 @keyframes bounce {
     0%   { transform: scale(1,1)      translateY(0); }
     10%  { transform: scale(1.1,.9)   translateY(0); }
-    30%  { transform: scale(.9,1.1)   translateY(-5px); }
+    30%  { transform: scale(.9,1.1)   translateY(-3px); }
     50%  { transform: scale(1.05,.95) translateY(0); }
     57%  { transform: scale(1,1)      translateY(-1px); }
     64%  { transform: scale(1,1)      translateY(0); }
@@ -27,6 +27,8 @@ h1, h2, h3, h4, h5, h6, p, button, label, input, a, div {
 
 .page {
     height: 100vh;
+    width: 100%;
+    padding: auto;
     box-sizing: border-box;
     position: absolute;
     /* background-color: #A89083; */
@@ -70,8 +72,8 @@ h1, h2, h3, h4, h5, h6, p, button, label, input, a, div {
 
 #invisible-container {
     position: absolute;
-    height: 70vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     top: 0px;
     left: 0px;
     background-color: rgb(255, 255, 255, 0);
@@ -93,16 +95,19 @@ h1, h2, h3, h4, h5, h6, p, button, label, input, a, div {
 
 #weather-div, #location-div {
     display: none;
+    position: absolute;
+    min-width: 150px;
     background-color: rgb(255, 255, 255, 0.7)
 }
 
 #search-container {
-    max-width: 201px;
+    min-width: 200px;
     box-sizing: border-box;
 }
 
 #search-results-display {
     display: none;
+    position: absolute;
     overflow-y: auto; 
     max-height:350px; 
     margin: 2px;
